--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>About Me</h1>
+    <img src="Vikas.jpg" alt="My Photo" width="200">
     <p><strong>Name:</strong> Vikas</p>
     <p><strong>Roll No:</strong> 31</p>
     <p><strong>Address:</strong> BH-5</p>
