--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>About Me</title>
 </head>
 <body>
+    <nav>
+        <a href="index.html">Home</a> |
+        <a href="subjects.html">Subjects</a>
+    </nav>
     <h1>About Me</h1>
     <img src="Vikas.jpg" alt="My Photo" width="200">
     <p><strong>Name:</strong> Vikas</p>
