--- a/Previous Sem.html
+++ b/Previous Sem.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Subjects</title>
+    <title>Previous Semester</title>
 </head>
 <body>
     <nav>
         <a href="index.html">Home</a> |
-        <a href="subjects.html">Subjects</a>
+        <a href="Subjects.html">Current Subjects</a> |
         <a href="previous_sem.html">Previous Semester</a>
     </nav>
-    <h1>My Current Semester Subjects</h1>
+    <h1>Previous Semester Information</h1>
+    <p><strong>Semester:</strong> 4</p>
+    <p><strong>SGPA:</strong> [Your SGPA]</p>
+
+    <h2>Subjects</h2>
     <table border="1">
         <thead>
             <tr>
@@ -21,13 +25,8 @@
         <tbody>
             <tr>
                 <td>1</td>
-                <td>CSE322</td>
-                <td>Formal Languages</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>PEA306</td>
-                <td>Analytical</td>
+                <td>[Enter Code]</td>
+                <td>[Enter Name]</td>
             </tr>
             <!-- Add more rows for your other subjects -->
         </tbody>
