--- a/Previous Sem.html
+++ b/Previous Sem.html
@@ -7,7 +7,7 @@
     <nav>
         <a href="index.html">Home</a> |
         <a href="Subjects.html">Current Subjects</a> |
-        <a href="previous_sem.html">Previous Semester</a>
+        <a href="Previous Sem.html">Previous Semester</a>
     </nav>
     <h1>Previous Semester Information</h1>
     <p><strong>Semester:</strong> 4</p>
@@ -25,8 +25,8 @@
         <tbody>
             <tr>
                 <td>1</td>
-                <td>[Enter Code]</td>
-                <td>[Enter Name]</td>
+                <td>INT141</td>
+                <td>Predictive Analysis</td>
             </tr>
             <!-- Add more rows for your other subjects -->
         </tbody>
