--- a/Subjects.html
+++ b/Subjects.html
@@ -6,8 +6,8 @@
 <body>
     <nav>
         <a href="index.html">Home</a> |
-        <a href="subjects.html">Subjects</a>
-        <a href="previous_sem.html">Previous Semester</a>
+        <a href="Subjects.html">Subjects</a>
+        <a href="Previous Sem.html">Previous Semester</a>
     </nav>
     <h1>My Current Semester Subjects</h1>
     <table border="1">
