--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
     <nav>
         <a href="index.html">Home</a> |
-        <a href="subjects.html">Subjects</a>
-        <a href="previous_sem.html">Previous Semester</a>
+        <a href="Subjects.html">Subjects</a>
+        <a href="Previous Sem.html">Previous Semester</a>
     </nav>
     <h1>About Me</h1>
     <img src="Vikas.jpg" alt="My Photo" width="200">
