--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <nav>
-        <a href="index.html">Home</a> |
+        <a href="index.html">Home 5</a> |
         <a href="Subjects.html">Subjects</a>
         <a href="Previous Sem.html">Previous Semester</a>
     </nav>
